--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
 		"date-fns": "^4.1.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
 		"geist": "^1.3.1",
 		"lucide-react": "^0.479.0",
 		"next": "15.2.2-canary.6",
