--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^11.1.0",
 		"vaul": "^1.1.2",
 		"zod": "^3.24.2"
 	},
