--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
+		"@next/eslint-plugin-next": "^15.2.4",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
@@ -29,12 +30,14 @@
 		"@radix-ui/react-toggle": "^1.1.2",
 		"@radix-ui/react-toggle-group": "^1.1.2",
 		"@radix-ui/react-tooltip": "^1.1.8",
+		"@tanstack/react-query": "^5.69.0",
 		"@tanstack/react-table": "^8.21.2",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
 		"date-fns": "^4.1.0",
 		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-unused-imports": "^4.1.4",
 		"geist": "^1.3.1",
 		"lucide-react": "^0.479.0",
 		"next": "15.2.2-canary.6",
