feat: implement sign up functionality

--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
 		"dev": "next dev --turbopack",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"pull": "pnpm prisma db pull",
+		"generate": "pnpm prisma generate",
+		"studio": "pnpm prisma studio -b chrome -p 5174"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^4.1.3",
 		"@next/eslint-plugin-next": "^15.2.4",
+		"@prisma/client": "^6.5.0",
 		"@radix-ui/react-alert-dialog": "^1.1.6",
 		"@radix-ui/react-avatar": "^1.1.3",
 		"@radix-ui/react-checkbox": "^1.1.4",
@@ -32,16 +36,21 @@
 		"@radix-ui/react-tooltip": "^1.1.8",
 		"@tanstack/react-query": "^5.69.0",
 		"@tanstack/react-table": "^8.21.2",
+		"axios": "^1.8.4",
+		"better-auth": "^1.2.5",
+		"better-sqlite3": "^11.9.1",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
 		"date-fns": "^4.1.0",
+		"dotenv": "^16.4.7",
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"geist": "^1.3.1",
 		"lucide-react": "^0.479.0",
 		"next": "15.2.2-canary.6",
 		"next-themes": "^0.4.5",
+		"next13-progressbar": "^1.2.2",
 		"react": "^19.0.0",
 		"react-day-picker": "8.10.1",
 		"react-dom": "^19.0.0",
@@ -58,11 +67,13 @@
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
+		"@types/better-sqlite3": "^7.6.12",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
 		"eslint": "^9",
 		"eslint-config-next": "15.2.2-canary.6",
+		"prisma": "^6.5.0",
 		"tailwindcss": "^4",
 		"typescript": "^5"
 	},
