--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"studio": "pnpm prisma studio -b chrome -p 5174"
 	},
 	"dependencies": {
+		"@better-fetch/fetch": "^1.1.18",
 		"@hookform/resolvers": "^4.1.3",
 		"@next/eslint-plugin-next": "^15.2.4",
 		"@prisma/client": "^6.5.0",
@@ -42,6 +43,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
+		"cookie": "^1.0.2",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.7",
 		"eslint-plugin-react-hooks": "^5.2.0",
