--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"eslint-plugin-react-hooks": "^5.2.0",
 		"eslint-plugin-unused-imports": "^4.1.4",
 		"geist": "^1.3.1",
+		"js-cookie": "^3.0.5",
 		"lucide-react": "^0.479.0",
 		"next": "15.2.2-canary.6",
 		"next-themes": "^0.4.5",
@@ -71,6 +72,7 @@
 		"@eslint/eslintrc": "^3",
 		"@tailwindcss/postcss": "^4",
 		"@types/better-sqlite3": "^7.6.12",
+		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^19",
 		"@types/react-dom": "^19",
