--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"cmdk": "1.0.0",
+		"command": "^1.1.1",
 		"cookie": "^1.0.2",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.7",
