--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
 		"@tanstack/react-query": "^5.69.0",
 		"@tanstack/react-table": "^8.21.2",
 		"axios": "^1.8.4",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.7",
 		"geist": "^1.3.1",
