--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"axios": "^1.8.4",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
 		"dotenv": "^16.4.7",
 		"geist": "^1.3.1",
@@ -57,6 +58,7 @@
 		"sonner": "^2.0.1",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
+		"vaul": "^1.1.2",
 		"zod": "^3.24.2",
 		"zustand": "^5.0.3"
 	},
