--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"clsx": "^2.1.1",
 		"cmdk": "^1.1.1",
 		"date-fns": "^4.1.0",
+		"dayjs": "^1.11.13",
 		"dotenv": "^16.4.7",
 		"geist": "^1.3.1",
 		"js-cookie": "^3.0.5",
