--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_AXIOS_DELAY=
-NEXT_PUBLIC_DATABASE_URL=""
+NEXT_PUBLIC_AXIOS_DELAY=false
+NEXT_PUBLIC_DATABASE_URL="http://localhost:3333"
