--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
 		"dotenv": "^16.4.7",
 		"geist": "^1.3.1",
 		"js-cookie": "^3.0.5",
-		"lucide-react": "^0.526.0",
+		"lucide-react": "2.15.4",
 		"next": "15.2.2-canary.6",
 		"next-themes": "^0.2.1",
 		"next13-progressbar": "^1.2.2",
@@ -63,7 +63,7 @@
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
-		"@tailwindcss/postcss": "^4",
+		"@tailwindcss/postcss": "^0.526.0",
 		"@types/js-cookie": "^3.0.6",
 		"@types/node": "^20",
 		"@types/react": "^19",
